# backend/src/routes/recipe.js
@@ -171,7 +171,7 @@ router.get('/:cocktailId', checkAccess, async (req, res) => {
 
 // update - Not supporting formdata at put method
 router.post(
-  '/:cocktailId',
+  'update/:cocktailId',
   checkAccess,
   upload.single('image'),
   async (req, res) => {
@@ -425,19 +425,33 @@ router.get('/detail/:cocktailId', checkAccess, async (req, res) => {
           attributes: ['UNO', 'NICKNAME', 'LEVEL'],
           required: false,
         },
+        {
+          model: db.COCKTAIL_LIKE,
+          as: 'COCKTAIL_LIKEs',
+          required: false,
+        },
       ],
       order: [[{ model: db.RECIPE, as: 'RECIPEs' }, 'AMOUNT', 'DESC']],
     });
+    let liked = false;
+    console.log(cocktail.COCKTAIL_LIKEs);
+    for (let i = 0; i < cocktail.COCKTAIL_LIKEs.length; i++) {
+      if (cocktail.COCKTAIL_LIKEs[i].UNO == req.user.UNO) {
+        liked = true;
+      }
+    }
     const color = cocktail.COLORs;
     const recipe = cocktail.RECIPEs;
     data.date = cocktail.createdAt;
     data.name = cocktail.NAME;
     data.alcoholic = cocktail.ALCOHOLIC;
     data.instruction = cocktail.INSTRUCTION;
+    data.like = cocktail.COCKTAIL_LIKEs.length;
     data.USER = {
       nickname: cocktail.UNO_USER.NICKNAME,
       level: cocktail.UNO_USER.LEVEL,
       iswriter: req.user.UNO == cocktail.UNO_USER.UNO ? true : false,
+      liked: liked
     };
     // color
     console.log(color);
@@ -455,6 +469,8 @@ router.get('/detail/:cocktailId', checkAccess, async (req, res) => {
       };
       data.ingred.push(temp);
     }
+
+    console.log(data);
 
     // color get
     // recipe get
@@ -524,19 +540,34 @@ router.get('/image/:cocktailId', async (req, res) => {
   }
 });
 
-router.post('/like/:cocktailId', async (req, res) => {
+router.post('/like/:cocktailId', checkAccess, async (req, res) => {
   try {
     const cocktailId = req.params.cocktailId;
-    await db.COCKTAIL_LIKE.create({ CNO: cocktailId, UNO: req.user.UNO });
+    const [like, created] = await db.COCKTAIL_LIKE.findOrCreate({
+      where: { CNO: cocktailId, UNO: req.user.UNO },
+    });
+
+    if (!created) {
+      await db.COCKTAIL_LIKE.destroy({
+        where: { CNO: cocktailId, UNO: req.user.UNO },
+      });
+    }
+    const count = await db.COCKTAIL_LIKE.count({ where: { CNO: cocktailId } });
+
+    return res.status(200).json({
+      success: true,
+      message: `Cocktail ${created ? 'Like' : 'Unlike'} 성공`,
+      like: count,
+    });
   } catch (error) {
     console.log(error);
     return res
       .status(400)
-      .json({ success: false, message: 'Recipe Like 실패', error });
+      .json({ success: false, message: 'Cocktail Like/Unlike 실패', error });
   }
 });
 
-router.post('/report/:cocktailId', async (req, res) => {
+router.post('/report/:cocktailId', checkAccess, async (req, res) => {
   try {
     const cocktailId = req.params.cocktailId;
     const report = req.body.report;
